--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
 
     <!-- FONT-AWESOME -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <!-- GOOGLE-FONT -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -22,16 +27,42 @@
     <div class="ms_wrapper">
         <!-- header -->
         <header class="ms_header">
+            <div class="container">
 
+            </div>
+            
         </header>
         <!-- /header -->
 
         <!-- main content -->
         <main class="ms_main d-flex">
 
-            <div class="ms_sidebar">
+            <!-- SiDEBAR-LEFT -->
+            <div class="ms_sidebar text-white position-relative">
+
+                <ul class="ms_sidebar-ul">
+                    <li class="d-flex align-items-center">
+                        <i class="fa-solid fa-house"></i>
+                        <div class="ms_text-active ms-2">Home</div>
+                    </li>
+                    <li class="mt-2 d-flex align-items-center">
+                        <i class="fa-solid fa-chart-simple"></i>
+                        <div class="ms_text-active ms-2">Stats</div>
+                    </li>
+                    <li class="mt-2 d-flex align-items-center">
+                        <i class="fa-solid fa-signal"></i>
+                        <div class="ms_text-active ms-2">Signals</div>
+                    </li>
+                </ul>
+
+                <div class="ms_settings d-flex align-items-center ps-3 position-absolute bottom-0 mb-2">
+                    <i class="fa-solid fa-gear"></i>
+                    <div class="ms_text-active ms-2">Admin</div>
+                </div>
 
             </div>
+            <!--/ SiDEBAR-LEFT -->
+
 
             <div class="ms_main-container">
 
