review banner - table

--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@
                 <div class="ms_banner text-white py-3">
                     <div class="container-fluid">
                         <div class="row g-4">
-                            <div class="col-12 col-md-4 order-md-3">
+                            <div class="col-12 col-md-3 order-md-3">
                                 <div class="ms_card d-flex justify-content-lg-end">
                                     <div class="ms_student mt-4">Nuovo Studente</div>
                                     <button type="button" class="btn btn-outline-light mt-4 ms-4"><i class="fa-solid fa-plus"></i></button>
                                 </div>
                             </div>
-                            <div class="col-12 col-md-4 order-md-1">
+                            <div class="col-12 col-md-6 order-md-1">
                                 <div class="ms_card">
                                     <div>
                                         <span class="fs-4">Boolean</span>
@@ -106,13 +106,22 @@
                                             <i class="fa-solid fa-angles-right"></i>
 
                                         </span>
-                                        <span class="ms-2">
+                                        <span class="ms-2 ms_btn_display">
                                             <a class="ms_btn" href="#"><i class="fa-solid fa-plus"></i></a>
+                                        </span>
+                                        <span>
+                                            <a class="ms_btn ms_none" href="#">Boolean mobile app</a>
+                                        </span>
+                                        <span>
+                                            <a class="ms_btn ms_none" href="#">Boolean web app</a>
+                                        </span>
+                                        <span>
+                                            <a class="ms_btn ms_none" href="#">Boolean blog app</a>
                                         </span>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-12 col-md-4 order-2">
+                            <div class="col-12 col-md-3 order-2">
                                 <div class="ms_card">
                                     <div class="fs-6">Studenti online negli ultimi 30 minuti</div>
                                     <div class="mt-2 fs-2">125</div>
@@ -124,7 +133,210 @@
                 </div>
 
                 <div class="ms_content">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit modi nisi officiis ipsam adipisci earum dolores ullam accusamus, illo veritatis velit eos impedit eligendi. Odit mollitia assumenda ullam optio culpa ut tenetur minus rerum, itaque vitae facilis? Neque a corrupti esse maiores laborum beatae provident aperiam accusantium quisquam consequuntur, consectetur qui pariatur dolores est ipsum magnam blanditiis illo quibusdam saepe doloribus. Et vitae aliquam consequuntur voluptas pariatur? Velit repellat itaque nisi alias. Quaerat laudantium hic fugit mollitia totam voluptate eligendi doloribus voluptatem labore asperiores. Adipisci, iste, fugit impedit aut iure unde laboriosam blanditiis omnis non labore voluptates alias minima veritatis nam quia suscipit ut modi ipsum. Repellendus illum sint eveniet fugiat ea corporis? Expedita, aut. Dolore totam iste inventore libero dolor, delectus corrupti error laboriosam, velit cumque, autem officiis culpa sit quidem saepe dolorem! Asperiores deleniti, vero optio repudiandae quasi provident quas totam dicta doloremque sapiente perspiciatis, vel neque maiores culpa odio atque cumque libero impedit facilis hic possimus a voluptates quaerat sunt. Delectus ipsam, aut eveniet ratione adipisci mollitia aliquam expedita veritatis obcaecati odit? Mollitia cupiditate ipsam quia officiis provident cumque odit ratione quibusdam repellendus, quae iste, quisquam, ea sapiente dolorum iure temporibus reprehenderit vel accusamus magnam explicabo alias sed commodi illo aliquam! Ducimus culpa necessitatibus maiores rem magni earum animi! Cum fugiat possimus et praesentium explicabo exercitationem odio quam mollitia. Molestiae ad accusantium ducimus eum, in hic! Corporis vitae debitis exercitationem eveniet consequatur officia. Nobis accusantium eum, expedita molestiae laudantium possimus quisquam nesciunt quidem maiores amet ipsa eveniet impedit unde nostrum nemo earum obcaecati reiciendis ullam consectetur temporibus quam exercitationem molestias ducimus inventore. Atque ea magni temporibus qui aut ullam dolores, tempora nisi quo sequi. Assumenda, deleniti beatae pariatur, suscipit itaque ut enim a qui ratione neque magni dolore saepe quo inventore maxime quis facere doloribus ab. Explicabo.
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-12">
+                                <div class="card">
+                                    <h5 class="card-header">Featured</h5>
+                                    <div class="card-body">
+                                        <table class="table">
+                                            <thead>
+                                              <tr>
+                                                <th scope="col">Nome</th>
+                                                <th scope="col" class="ms_col-none">Data di inizio</th>
+                                                <th scope="col" class="ms_col-none">ROI</th>
+                                                <th scope="col">Stato</th>
+                                                <th scope="col">Azioni</th>
+                                              </tr>
+                                              
+                                            </thead>
+                                            <tbody>
+                                              <tr>
+                                                <th>
+                                                    <img src="img/class-avatar.jpg" alt="">
+                                                    <span>Classe 75</span>
+                                                </th>
+                                                <td class="ms_large ms_col-none">15 Feb. 2021</td>
+                                                <td class="ms_col-none">20%</td>
+                                                <td>
+                                                    <button type="button" class="btn btn-success">Done</button>
+                                                </td>
+                                                <td class="ms_btn-large">
+                                                    <span>
+                                                        <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-pen"></i></button>
+                                                    </span>
+                                                    <span>
+                                                        <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>  
+                                                    </span>
+                                                </td>
+                                              </tr>
+                                              <tr>
+                                                <th>
+                                                    <img src="img/class-avatar.jpg" alt="">
+                                                    <span>Classe 76</span>
+                                                </th>
+                                                <td class="ms_large ms_col-none">16 Feb. 2021</td>
+                                                <td class="ms_col-none">20%</td>
+                                                <td>
+                                                    <button type="button" class="btn btn-success">Done</button>
+                                                </td>
+                                                <td>
+                                                    <span>
+                                                        <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-pen"></i></button>
+                                                    </span>
+                                                    <span>
+                                                        <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>  
+                                                    </span>
+                                                </td>
+                                              </tr>
+                                              <tr>
+                                                <th>
+                                                    <img src="img/class-avatar.jpg" alt="">
+                                                    <span>Classe 77</span>
+                                                </th>
+                                                <td class="ms_large ms_col-none">17 Feb. 2021</td>
+                                                <td class="ms_col-none">20%</td>
+                                                <td>
+                                                    <button type="button" class="btn btn-warning">process</button>
+                                                </td>
+                                                <td>
+                                                    <span>
+                                                        <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-pen"></i></button>
+                                                    </span>
+                                                    <span>
+                                                        <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>  
+                                                    </span>
+                                                </td>
+                                              </tr>
+                                              <tr>
+                                                <th>
+                                                    <img src="img/class-avatar.jpg" alt="">
+                                                    <span>Classe 78</span>
+                                                </th>
+                                                <td class="ms_large ms_col-none">18 Feb. 2021</td>
+                                                <td class="ms_col-none">20%</td>
+                                                <td>
+                                                    <button type="button" class="btn btn-success">Done</button>
+                                                </td>
+                                                <td>
+                                                    <span>
+                                                        <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-pen"></i></button>
+                                                    </span>
+                                                    <span>
+                                                        <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>  
+                                                    </span>
+                                                </td>
+                                              </tr>
+                                              <tr>
+                                                <th>
+                                                    <img src="img/class-avatar.jpg" alt="">
+                                                    <span>Classe 79</span>
+                                                </th>
+                                                <td class="ms_large ms_col-none">19 Feb. 2021</td>
+                                                <td class="ms_col-none">20%</td>
+                                                <td>
+                                                    <button type="button" class="btn btn-danger">Falled</button>
+                                                </td>
+                                                <td>
+                                                    <span>
+                                                        <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-pen"></i></button>
+                                                    </span>
+                                                    <span>
+                                                        <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>  
+                                                    </span>
+                                                </td>
+                                              </tr>
+                                              <tr>
+                                                <th>
+                                                    <img src="img/class-avatar.jpg" alt="">
+                                                    <span>Classe 80</span>
+                                                </th>
+                                                <td class="ms_large ms_col-none">20 Feb. 2021</td>
+                                                <td class="ms_col-none">20%</td>
+                                                <td>
+                                                    <button type="button" class="btn btn-success">Done</button>
+                                                </td>
+                                                <td>
+                                                    <span>
+                                                        <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-pen"></i></button>
+                                                    </span>
+                                                    <span>
+                                                        <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>  
+                                                    </span>
+                                                </td>
+                                              </tr>
+                                              <tr>
+                                                <th>
+                                                    <img src="img/class-avatar.jpg" alt="">
+                                                    <span>Classe 81</span>
+                                                </th>
+                                                <td class="ms_large ms_col-none">21 Feb. 2021</td>
+                                                <td class="ms_col-none">20%</td>
+                                                <td>
+                                                    <button type="button" class="btn btn-danger">Falled</button>
+                                                </td>
+                                                <td>
+                                                    <span>
+                                                        <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-pen"></i></button>
+                                                    </span>
+                                                    <span>
+                                                        <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>  
+                                                    </span>
+                                                </td>
+                                              </tr>
+                                              <tr>
+                                                <th>
+                                                    <img src="img/class-avatar.jpg" alt="">
+                                                    <span>Classe 82</span>
+                                                </th>
+                                                <td class="ms_large ms_col-none">22 Feb. 2021</td>
+                                                <td class="ms_col-none">20%</td>
+                                                <td>
+                                                    <button type="button" class="btn btn-success">Done</button>
+                                                </td>
+                                                <td>
+                                                    <span>
+                                                        <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-pen"></i></button>
+                                                    </span>
+                                                    <span>
+                                                        <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>  
+                                                    </span>
+                                                </td>
+                                              </tr>
+                                            </tbody>
+                                          </table>
+                                    </div>
+                                </div>
+                                <div class="card">
+                                    <h5 class="card-header">Featured</h5>
+                                    <div class="card-body">
+                                      <h5 class="card-title">Special title treatment</h5>
+                                      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                                    </div>
+                                </div>
+
+                            </div>
+                            <div class="col-12">
+                                <div class="card">
+                                    <h5 class="card-header">Featured</h5>
+                                    <div class="card-body">
+                                      <h5 class="card-title">Special title treatment</h5>
+                                      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                                    </div>
+                                  </div>
+                                  <div class="card">
+                                    <h5 class="card-header">Featured</h5>
+                                    <div class="card-body">
+                                      <h5 class="card-title">Special title treatment</h5>
+                                      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                                    </div>
+                                  </div>
+                            </div>
+                        </div>
+                    </div>
 
                 </div>
 
